# DEISM

./: .coverage  .gitignore  .readthedocs.yaml  .readthedocs.yml  DEISM.yml  DEISM_arg_decouple.md  MANIFEST.in  README.md  codecheck.md  codecheck.yml  deism_algorithms_summary.tex  deism_env.yml  deism_env_exact.yml  deism_example.py  helper.py  issues.md  pyenv_conda_troubleshooting.md  pyproject.toml  ref_nn_gradient_9.pt  ref_nn_ingard_F.pt  requirements.txt  room_acoustics_algorithms_summary.tex  setup.py  test_rtf_conversion.py
DEISM-main/: __init__.py  deism_env.yml  deism_env_exact.yml
LICENSE/: License.txt
deism/: __init__.py  arg_decouple.py  arg_room_parity.py  build_count_reflections.sh  core_deism.py  core_deism_arg.py  count_reflections.cpp  count_reflections.dylib  count_reflections_wrapper.py  data_loader.py  dir_vis.py  dir_vis_sofa.py  directivity_visualizer.py  libroom_deism.cp39-win_amd64.pyd  parallel_backends.py  room_check.py  shared_utils.py  test_dir.py  utilities.py  version.py
docs/: api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  recent_works_review_for_DEISM.md  requirements.txt  troubleshooting.rst  workflows.rst
examples/: DEinterface.py  DeismInterface.py  Scr&Rec_pos_idx_BRAS.xlsx  T60_cal.py  attributes in dataset from TU Ilmenau.xlsx  comparison_analysis.py  configSingleParam.yml  configSingleParam_ARG_RIR.yml  configSingleParam_ARG_RTF.yml  configSingleParam_RIR.yml  configSingleParam_RTF.yml  configSingleParam_RTF_verify.yml  configSingleParam_arg.yml  deism_JASA_fig8.py  read_SOFA.py  (+24 more)
(+218 files in other folders)
